# templates

./: HowToFindLib.txt  HowTo_CreateAutostart.txt  HowTo_ROS.txt
CMake_example/: CMakeLists.txt
CMake_example/src/: main.cpp
LUTabelGenViaPreProcess/LUTviaFile/: a.out  main.cpp
ProcessManager/: ProcessManager.py
UDP_tools/: ClientSendOneFrame.py  README.md  SendUdpToBroadCast.py.save  SendUdpToBroadCast.py.save.1  SockServerWaitForData.py  linuxCmdListenBroadCast.txt  simpleUDP_listener_client.py  simpleUDP_server.py
UDP_tools/dump/: SendUdpToBroadCast.py  reciveUdpToBroadCast.py
UDP_tools/payloadProtocol/: README.md
UDP_tools/socket/: CMakeLists.txt
UDP_tools/socket/lib/: udpEsp32Interface.hpp
UDP_tools/socket/src/: main.cpp  udpEsp32Interface.cpp
UDP_tools/socketWithNanoPb/: CMakeLists.txt  main.cpp
UDP_tools/socketWithNanoPb/lib/: protoLighthouse.h  udpEsp32Interface.hpp
UDP_tools/socketWithNanoPb/proto/: lighthouse.proto
UDP_tools/socketWithNanoPb/src/: udpEsp32Interface.cpp
bittools/: PrintBitPattern.py  PrintBitPattern_filterd.py  README.md  SearchForKnownPattern.py  bitdump.txt  bitdump1.txt  bitdump2.txt  bitdump_longmsg.txt  bitdump_shortmsg.txt
docker/: README.md
esp32/uBlox_Nina/: README.md
fpga_cmd_testbench/: README.txt  inout_pin  inout_pin.v  multiDim_reg  multiDim_reg.v  multiDim_reg.v.save  reg_dir  register_dirction.v
fpga_cmd_testbench/verilog_tb_gen/: TS43231_init.v  tb.v  tbgen.py
fpga_icestorm/: README.md
fpga_icestorm2/: LighthouseTopLevel.v.delete  Makefile  pins.pcf  top.asc  top.rpt  top.v
fpga_icestorm2/ip/lighthouse/: LighthouseTopLevel.v  blackboxes.v
ip-cores/UART/: HowTo.txt  Uart.v  UartCtrl.v  common.v  uart_rx.v  uart_tx.v
ip-cores/UART_debug_interface/: UartDebug.py  print_frame.py
ip-cores/common/: Uart.v  UartDebug.py  buffer.v  shiftBuffer.v  tri_state.v
matrix/: matrix.cpp  matrix.hpp
python_simple_ros/: example.py
raspberry/: README.md  README_AccessPoint.txt
raspberry/raspberry_NoCatkin/: README.md
raspberry/raspberry_NoCatkin/src/: main.cpp
raspberry/raspberry_crosscompiled_local/: CMakeLists.txt  Toolchain-RaspberryPi.cmake  hello.c  hello_c  hiho  main.cpp
raspberry/raspberry_crosscompiled_local_ros/devel/: .catkin  local_setup.sh
raspberry/raspberry_crosscompiled_local_ros/src/project_1/: CMakeLists.txt  main.cpp
raspberry/raspberry_ros/src/project_1/: CMakeLists.txt
raspberry/raspberry_ros/src/rpi_ros_uart/: CMakeLists.txt  package.xml
raspberry/raspberry_ros/src/rpi_ros_uart/src/: main.cpp
raspberry/raspberry_serial/src/rpi_ros_uart/src/: main.cpp
raspberry/rpi_ros1_joystick/src/stearing_interface/lib/: stearing.hpp
raspberry/rpi_ros1_joystick/src/stearing_interface/src/: stearing.cpp
raspberry/rpi_ros1_joystickAndMotor/: cpy_scritp.sh
raspberry/rpi_ros1_joystickAndMotor/src/stearing_interface/: README.md  main.cpp  package.xml
raspberry/rpi_ros1_joystickAndMotor/src/stearing_interface/lib/: stearing.hpp
raspberry/rpi_ros1_joystickAndMotor/src/stearing_interface/src/: stearing.cpp
raspberry/rpi_ros1_joystick_crosscompiled/src/stearing_interface/: CMakeLists.txt  README.md
raspberry/scripts/: .env  fix_eth0.sh  setup.sh  setup_AP.sh  setup_docker.sh  setup_ros.sh
raspberry_NoCatkin/: CMakeLists.txt
raspberry_ros/src/rpi_ros_uart/: README.md
ros2/talkerAndsub/src/sub/: CMakeLists.txt  OLD_CMakeLists.txt  main.cpp  package.xml
ros2/talkerAndsub/src/talk/: CMakeLists.txt  README.md  main.cpp  package.xml
ros_example/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
ros_example/devel/lib/pkgconfig/: ros_example.pc
ros_example/devel/lib/ros_example/: executable_name
ros_example/devel/share/ros_example/cmake/: ros_exampleConfig.cmake
ros_example/src/project_mainfolder/: CMakeLists.txt  main.cpp  package.xml
ros_example/src/project_mainfolder/include/: example_class.hpp
ros_example/src/project_mainfolder/src/: example_class.cpp
ros_example_roboy_communication/: CMakeLists.txt  package.xml
threats/ClassWithThreads/: CMakeLists.txt  main.cpp
threats/ClassWithThreads/lib/: testClass.hpp
threats/ClassWithThreads/src/: testClass.cpp
threats/UdpClassWithThreads/: main.cpp
threats/UdpClassWithThreads/lib/: udpInterface.hpp
threats/UdpClassWithThreads/src/: udpInterface.cpp
threats/UdpClassWithThreadsAndCustomPayload/: CMakeLists.txt  main.cpp
threats/UdpClassWithThreadsAndCustomPayload/lib/: udpInterface.hpp
threats/UdpClassWithThreadsAndCustomPayload/src/: udpInterface.cpp
threats/udpSandbox/: main.cpp
threats/udpSandbox/src/: protoLighthouse.cpp
usb_tools/: HOWTO_usbSniff.txt  README.md  tools.txt
usb_tools/C_libusb_example/: driver_dummy.c  driver_dummy.config.h  driver_dummy.config.h.gch  driver_dummy.h
usb_tools/C_libusb_simple/: CMakeLists.txt
usb_tools/C_libusb_simple/src/: main.c
usb_tools/dataGrabber/: dataGrabber.py  dump_my.txt  dump_vive.txt  hid_cmd.py
usb_tools/dataGrabber/dump/: capClearData_noLight.txt  capClearData_noLight01.txt  capRawData_noLight0.txt  capRawData_noLight01.txt  dataParser.py  foo.pcap  foo.txt  ws_clear_nolight.txt  ws_raw_light_imuData_sensor23.txt  ws_raw_light_onlyData.txt  ws_raw_light_onlyData_sensor23.txt  ws_raw_nolight.txt  ws_raw_nolight_onlyData.txt  ws_raw_nolight_onlyData_accX-9.txt
usb_tools/stepByStepReversEngineering/: CMakeLists.txt  README.md
usb_tools/stepByStepReversEngineering/src/: dump.txt  main.c
