<?xml version="1.0"?>
<package format="2">
  <name>roboy_lighthouse2</name>
  <version>0.0.0</version>
  <description>ros_example</description>
  <maintainer email="Sausmikat.Michael@gmail.com">Michael Sausmikat</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roboy_middleware_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
