<!-- <package> -->
<package format="2">
  <name>sub</name>
  <version>0.0.0</version>
  <description>ros_example</description>
  <maintainer email="Sausmikat.Michael@gmail.com">Michael Sausmikat</maintainer>
  <license>BSD</license>
<!--  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<!--  <build_depend>roscpp</build_depend> -->
<!--  <run_depend>roscpp</run_depend> -->
<!--  <run_depend>std_msgs</run_depend> -->
<!--  <depend>roboy_middleware_msgs</depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
